Build and design section 1
Just started building and designing this landing page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <!-- "Section-1 means the top quarter of the page" -->
+    <!-- To my understanding, this page consists of 5 parts (or you could say 5 boxes) -->
+    <div class="section-1">
+        <div class="nav-bar">
+            <p><strong>Header Logo</strong></p>
+            <li class="header-links">
+                <ul>Header link one</ul>
+                <ul>Header link two</ul>
+                <ul>Header link three</ul>
+            </li>
+        </div>
+        <div class ="section-1-content">
+            <div class="left">
+                <h1>This Website is awesome</h1>
+                <p>This website has some subtext that goes here under tha main 
+                    title. Its a smaller font and the color is lower contrast
+                </p>
+                <button>Sign up</button>
+            </div>
+            <div class="right">
+                <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
