--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
             </div>
         </div>
     </div>
+    <!-- section 1 ends here and section 2 begins. -->
+    <div class="section-2">
+        <h2>Some Random Information</h2>
+        <div class="boxes">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+    </div>
 </body>
 
 </html>
