--- a/index.html
+++ b/index.html
@@ -38,10 +38,22 @@
     <div class="section-2">
         <h2>Some Random Information</h2>
         <div class="boxes">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="container">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration of an image</p>
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration of an image</p>
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration of an image</p>
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration of an image</p>
+            </div>
         </div>
     </div>
 </body>
