--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
             </div>
         </div>
     </div>
+    <!-- Section 2 end. Section 3 Begin -->
+    <div class="section-3">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer.
+            Maybe its just filling up space, or maybe people will actually read it. Who knows?
+            All I know is that it looks nice
+        </p>
+        <p class="quoter">~Thor, God of Thunder</p>
+    </div>
 </body>
 
 </html>
