--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
         </p>
         <p class="quoter">~Thor, God of Thunder</p>
     </div>
+    <!-- Section 3 end. Section 4 begins -->
+    <div class="section-4">
+        <div class="cta">
+            <div class="text">
+                <h2>Call to action! Its time!</h2>
+                <p>Sign up for our product by clicking that button right over there</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
+    <!-- section 4 ends. Footer begins -->
+    <div class="footer">
+        <p>Copyright &copy The Odin Project 2021</p>
+    </div>
 </body>
 
 </html>
