Add footer Just learned theres a footer element so i used it directly instead of using a div with a footer class

--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
         </div>
     </div>
     <!-- section 4 ends. Footer begins -->
-    <div class="footer">
-        <p>Copyright &copy The Odin Project 2021</p>
-    </div>
+     <footer>Copyright &copy The Odin Project 2021</footer>
+    
 </body>
 
 </html>
